projeto-devmedia-ajuste

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
 
-        <section class="secao-informacoes">
+        <section class="secao-informacoes" id="informacoes">
 
             <h2 class="titulo-meio">Existem diversos serviços de hospedagem de sites. Porque você deve <span>nos
                     escolher?</span></h2>
@@ -90,7 +90,7 @@
 
         </section>
 
-        <section class="tabela-planos">
+        <section class="tabela-planos" id="planos">
 
             <h2>Pague <span>somente</span> pelo que for usar. Sem cobranças adicionais!</h2>
 
@@ -169,7 +169,7 @@
 
         </section>
 
-        <section class="contato">
+        <section class="contato" id="contato">
 
             <div class="logo-baixo">
                 <img src="assets/logo-icone.png" alt="">
